...

      if (username.length < 4 || password.length < 8) {
        if (username.length < 4 && password.length >= 8) {
          emit(UserError('Username must be at least 4 characters.'));
        }
        if (username.length >= 4 && password.length < 8) {
          emit(UserError('Password must be at least 8 characters.'));
        }
        if (username.length < 4 && password.length < 8) {
          emit(UserError('Username and password are too short.'));
        }
        return;
      }
...
      return 'Email cannot be null or empty.';
    }

    final emailRegex = RegExp(r'^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$');

    if (!emailRegex.hasMatch(email)) {
      return 'Email address is not in the correct format.';
    }

    final emailParts = email.split('@');
    final username = emailParts[0];
    final domain = emailParts[1];

...
