...
                title: const Text("C R E A T E   A C C O U N T"),
                onTap: () {
                  context.go('/register');
                },
              ),
              ListTile(
                key: const Key("logout"),
                leading: const Icon(Icons.logout),
                title: const Text("L O G   O U T"),
                onTap: () {
                  context.go('/');
                },
              ),
...
